Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: network-manager-applet\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-08 20:11+0200\n"
-"PO-Revision-Date: 2018-05-08 20:12+0200\n"
+"PO-Revision-Date: 2018-05-08 20:13+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -1721,7 +1721,7 @@ msgstr "Interfejs, na którym nawiązać połączenie PPP."
 
 #: ../src/connection-editor/ce-page-dsl.ui.h:12
 msgid "C_laim interface"
-msgstr "_Przejmij interfejs"
+msgstr "_Przejęcie interfejsu"
 
 #: ../src/connection-editor/ce-page-dsl.ui.h:13
 msgid ""
