--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,19 @@
 ======================================================
+network-manager-applet-1.4.8
+Overview of changes since network-manager-applet-1.4.6
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Prevent the use from opening a file open dialog if they don't have
+  permission to edit connections (e.g. in the login manager session)
+  (CVE-2017-6590)
+* Updated Brazilian Portuguese, Catalan, Croatian, Czech, Danish, Galician,
+  German, Hungarian, Indonesian, Italian, Kazakh, Latvian, Lithuanian,
+  Polish, Russian, Scottish Gaelic, Serbian, Slovak, Spanish and Swedish
+  translations.
+
+======================================================
 network-manager-applet-1.4.6
 Overview of changes since network-manager-applet-1.4.4
 ======================================================
