Updated Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -4051,7 +4051,7 @@ msgstr "chybějící SSID"
 #: ../src/connection-editor/page-wifi-security.c:563
 #, c-format
 msgid "Security not compatible with Ad-Hoc mode"
-msgstr "Bezpečnost není kompatibilní s režimem dočasné sítě"
+msgstr "Bezpečnost není kompatibilní s režimem ad hoc"
 
 #: ../src/connection-editor/vpn-helpers.c:132
 #, c-format
