build: disable libnm-gtk by default
By now nobody should be using this. Keep the code around for a little
longer just in case anybody still uses this.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 =======================================================
+network-manager-applet-1.8.20 (not released yet)
+Overview of changes since network-manager-applet-1.8.18
+=======================================================
+
+* Build of libnm-gtk, a libnm-glib compatibility library, is disabled by
+  default. It can be enabled by passing --with-libnm-gtk to configure
+  script. Nobody should need it by now. Users that still use this are
+  encouraged to let us know before the libnm-glib support is removed for good.
+
+=======================================================
 network-manager-applet-1.8.18
 Overview of changes since network-manager-applet-1.8.16
 =======================================================
